Add other anotations for swagger
