# app/Models/NfeSuccesses.php
@@ -5,6 +5,12 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Builder;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ *  @OA\Schema(
+ *   schema="NFe",
+ *   type="object"
+ * )
+ */
 class NfeSuccesses extends Model
 {
     protected $table = 'nfe_successes';
@@ -14,6 +20,26 @@ class NfeSuccesses extends Model
         'amount',
         'xml',
     ];
+
+    /**
+     * @OA\Property(type="integer")
+     */
+    public $id;
+
+    /**
+     * @OA\Property(type="string")
+     */
+    public $access_key;
+
+    /**
+     * @OA\Property(type="number")
+     */
+    public $amount;
+
+    /**
+     * @OA\Property(type="string")
+     */
+    public $xml;
 
     public function scopeByAccessKey(Builder $builder, string $accessKey): Builder
     {
